  anymore.
* When an 'account' command was executed and messages were sent to mbox
  when the old mailbox was quit, the mbox on the new account was used.
  Messages from the old mailbox now go to the mbox on the old account.
* Nail did not properly keep the mark for the current message if messages
  were expunged on an IMAP server.
* The 'markanswered' variable has been fixed to be effective with the
  'Reply' command too, and not to mark messages if the reply has been
  aborted by '~q' or '~x' or if a send error was detected.
* If the initial connection setup to an IMAP server is interrupted or if
  authentication fails, folder hooks are no longer executed.

[11.6] released 9/7/04
* An IMAP performance improvement introduced in release 11.5 lead to an
  inconsistency in the internal states if a command like 'copy' was
  followed by another command that fetched a message text from the server.
  Due to an error in the IMAP response parser, this sometimes resulted in
  core dumps.
* Support for the 'maildir' folder format was added.
* The 'account' command was changed; its syntax and semantics are similar
  to the 'define' command now. This change is downwards compatible, and
  old 'account' definitions are still accepted.
* If the account listing generated by the 'account' commands without an
  argument exceeds the screen height, the pager is invoked now.
* It is not an error to 'unset' an undefined variable from within a 'call'
  command or folder hook now.
* A 'defines' command was added to print the currently defined macros.
* The header summary that is printed when new mail arrives erroneously
  included killed messages.
* When a message in a multibyte character set like UTF-8 that was encoded
  as quoted-printable was printed and a multibyte character was separated
  by a '=' continued line, it was not decoded correctly.
* The '&' addressing mode is now recognized in non-threaded mode too,
  although it has no special effect then.